[package]
name = "rust-echo-request"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde = "1.0.188"
serde_json = "1.0.105"
unit-wasm = { path = "../../../src/rust", version = "0.1.1" }

[lib]
crate-type = ["cdylib"]
