[package]
name = "unit-wasm-sys"
version = "0.2.0"
edition = "2021"
authors = ["Timo Stark <t.stark@nginx.com>", "Andrew Clayton <a.clayton@nginx.com>"]
links = "unit-wasm"
description = "Native bindings for the libunit-wasm C API"
license = "Apache-2.0"
keywords = ["nginx", "unit", "ffi", "sys"]

[lib]
name = "unit_wasm_sys"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[build-dependencies]
bindgen = "0.66.1"
